fixes styling on small screen

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -418,12 +418,12 @@
     .welcomeP
         background-color: transparent
         color: white
-        font-size: 11px
+        font-size: 10px
         left: 0
         margin: auto
         right: 0
         text-align: center
-        top: 20rem
+        top: 15rem
 
     .welcomeP span
         background-color: transparent
